inicio de sesion

--- a/css/Ini_sesion.css
+++ b/css/Ini_sesion.css
@@ -19,45 +19,15 @@ body[data-bs-theme="dark"] {
     
 }
 
-body[data-bs-theme="dark"] .header_bann{
-    
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
-    
-    
-}
-
-body[data-bs-theme="dark"] .menu__item{
-    
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
-    background-color: #860101;
-    border: 2px solid #ff0000;
-    
-    
-}
-
-body[data-bs-theme="dark"] .menu__item:hover{
-    
-    color: #000000;
-    border: 2px solid #a80000;
-    background-color: #be0202;
-    
-}
-
 body[data-bs-theme="dark"] a{
     
     color: #fff;
     
 }
 
-body[data-bs-theme="dark"] .header{
-    
-    background-image: url(../img/siora-photography-228Ug-nLxx8-unsplash.jpg);
-    color: #fff;
-    
-}
-
 body[data-bs-theme="dark"] .header_bann{
     
+    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
     background-image: linear-gradient(to bottom, rgba(170, 0, 0, 0.81), rgba(61, 0, 0, 0.81));
     color: #fff;
     border-bottom: 2px solid #ff0000;
@@ -66,46 +36,92 @@ body[data-bs-theme="dark"] .header_bann{
     
 }
 
+body[data-bs-theme="dark"] .login-box{
 
-body[data-bs-theme="dark"] .header__fondo{
+    background: rgba(87,0,0,0.81);
+
+}
+
+body[data-bs-theme="dark"] .login-box p:first-child {
     
-    border: 10px solid rgba(87,0,0,0.81);
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
     
 }
 
-body[data-bs-theme="dark"] .btn-productos{
+body[data-bs-theme="dark"] .login-box .user-box input {
     
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
-    background-color: #860101;
-    border: 2px solid #ff0000;
-    
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
     
 }
 
-body[data-bs-theme="dark"] .btn-productos:hover{
-    
+body[data-bs-theme="dark"] .login-box .user-box label {
+    color: #ffffff;
+}
+
+body[data-bs-theme="dark"] .login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+
+    color: #ffffff;
+
+}
+
+body[data-bs-theme="dark"] .login-box form a {
+
+    color: #ffffff;
+    background: #630000;
+
+}
+
+body[data-bs-theme="dark"] .login-box a:hover {
+    background: #b60000e8;
+    color: #350000;
+}
+
+
+body[data-bs-theme="dark"] .login-box a span:nth-child(1) {
+
+    background: linear-gradient(90deg, transparent, #ff0000);
+
+}
+
+body[data-bs-theme="dark"] .login-box a span:nth-child(2) {
+
+    background: linear-gradient(180deg, transparent, #ff0000);
+
+}
+
+
+
+body[data-bs-theme="dark"] .login-box a span:nth-child(3) {
+
+    background: linear-gradient(270deg, transparent, #ff0000);
+
+}
+
+
+body[data-bs-theme="dark"] .login-box a span:nth-child(4) {
+
+    background: linear-gradient(360deg, transparent, #ff0000);
+
+}
+
+body[data-bs-theme="dark"] .login-box p:last-child {
+    color: #fdfdfd;
+
+}
+
+body[data-bs-theme="dark"] .login-box a.a2 {
     color: #000000;
-    border: 2px solid #a80000;
-    background-color: #be0202;
-    
+
 }
 
-body[data-bs-theme="dark"] .form_con{
-    
-    box-shadow: -2px -4px 17px 6px rgba(87,0,0,0.81);
-    background-color: #202020;
-    
-    
-}
+body[data-bs-theme="dark"] .login-box a.a2:hover {
 
-body[data-bs-theme="dark"] .contactame{
-    
-    
-    background-image: url(/Portafolio/img/wave\ \(2\).svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    
+    background-color: transparent;
+    color: #ffffff;
+
 }
 
 body[data-bs-theme="dark"] .footer{
@@ -117,6 +133,9 @@ body[data-bs-theme="dark"] .footer{
     background-image: linear-gradient(to bottom, rgba(170, 0, 0, 0.81), rgba(61, 0, 0, 0.81));
     
 }
+
+
+
 
 .white-icon{
 
@@ -195,7 +214,6 @@ body[data-bs-theme="light"] a{
 
 
 
-
 /*CONTENEDOR*/
 
 .contenedor {
@@ -207,25 +225,15 @@ body[data-bs-theme="light"] a{
     grid-gap: 20px;
     grid-row-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(8, auto);
+    grid-template-rows: repeat(3, auto);
     grid-template-areas: 
         "header_bann header_bann header_bann header_bann"
-        "menu menu  menu menu "    
-        "header header  header header "
-        "container  container container container"
-        "proyect_view proyect_view proyect_view  proyect_view"
-        "sobre_mi sobre_mi  sobre_mi sobre_mi"
-        "contactame contactame  contactame contactame"
+        "Login-container Login-container Login-container  Login-container"
         "footer footer footer footer";
 }
 
 .contenedor> .contenedor .header_bann,
-.contenedor .header,
-.contenedor .menu,
-.contenedor .container,
-.contenedor .proyect_view,
-.contenedor .sobre_mi,
-.contenedor .contactame,
+.contenedor .Login-container,
 .contenedor .footer,
 
 .contenedor .header_bann{
@@ -234,44 +242,11 @@ body[data-bs-theme="light"] a{
 
 }
 
-.contenedor .header {
+.contenedor .Login-container{
 
-    grid-area: header;
-
-
+    grid-area: Login-container;
 }
 
-.contenedor .menu {
-
-
-    grid-area: menu;
-
-}
-
-.contenedor .container {
-
-    grid-area: container;
-
-
-}
-
-.contenedor .sobre_mi {
-
-    grid-area: sobre_mi;
-
-
-}
-
-.contenedor .proyect_view{
-
-    grid-area: proyect_view;
-}
-
-.contenedor .contactame {
-
-    grid-area: contactame;
-
-}
 
 .contenedor .footer {
 
@@ -291,7 +266,6 @@ body[data-bs-theme="light"] a{
 .flex_ban {
     display: flex;
     align-items: center;
-    
 }
 
 .lgo_tit {
@@ -311,6 +285,8 @@ body[data-bs-theme="light"] a{
 .inicio_sesion {
     display: flex;
     align-items: center;
+    margin-right: 50px;
+    margin-left: 50px;
     
 }
 
@@ -355,11 +331,7 @@ body[data-bs-theme="light"] a{
     margin: 0px 5px 5px 5px;
 }
 
-.inicio_sesion img {
-    width: 25px;
-    height: 25px;
-    margin: 0px 5px 10px 5px;
-}
+
 
 
 .header_bann {
@@ -384,298 +356,207 @@ body[data-bs-theme="light"] a{
     font-size: 15px;
 }
 
-
-
-/*Navbar*/
-
-.menu {
-
-    width: 100%;
-    z-index: 999;
+.Login-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    font-family: 'Noto Serif', serif;
-    font-style: italic;
-    padding: 10px 30px;
-    -moz-border-radius: 50px;
-    border-radius: 15px;
-}
-
-.menu__item {
-
-    display: inline-block;
-    margin: 20px;
-    box-shadow: 30px;
-    padding: 10px 30px;
-    border-radius: 5px;
-    box-shadow: inset;
-    font-size: 26px;
-    transition: .8s ease all;   
-    box-shadow: 2px -4px 30px 6px rgba(0, 153, 173, 0.81);
-    border: 2px solid rgba(0, 225, 255, 0.856);
-    
-}
-
-.menu__item:hover {
-    
-    text-decoration: none;
-    transition: .5s;
-    transform: scale(1.2);
-    background-color: rgba(0, 197, 223, 0.81);
-    color: #f1fcff;
-    border: 2px solid rgba(0, 137, 155, 0.856);
-    
-}
-
-
-
-/*header*/
-
-.header {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    background-image: url(../img/DALL·E\ 2023-04-04\ 11.12.58\ -\ wallpaper\ para\ celular\ s20+\ de\ el\ espacio\ en\ donde\ se\ vea\ la\ tierra\ y\ la\ luna\ .png);
-    background-repeat: no-repeat;
-    
-}
-
-.header__fondo {
     width: 100%;
     height: 700px;
-    max-width: 100%;
-    border: 10px solid rgba(0, 153, 173, 0.81);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-    
 }
 
-.header__titulo{
-
-    text-align: center;
-    font-size: 100px;
-    user-select: none;
-
-}
-
-
-
-
-
-/*Nosotros*/
-
-.nosotros {
-    margin-bottom: 60px;
-}
-
-.subtitulo {
-    font-size: 30px;
-    font-family: 'Noto Serif', serif;
-    font-weight: 700;
-    z-index: 2;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    
-}
-
-.subtitulo__texto {
-    
-    padding: 0 15px; 
-    z-index: 99;
-    position: relative;
-}
-
-.subtitulo::after {
-    display: inline-block;
-    height: 2px;
-    width: 100%;
-    position: relative;
-    top: -29px;
-    z-index: 1;
-}
-
-.nosotros__titulo {
-
-    font-size: 44px;
-    text-transform: uppercase;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 50px;
-}
-
-.nosotros__enlace {
-    display: inline-block;
-    margin-top: 40px;
-    font-weight: 700;
-    border-bottom: 1px solid transparent;
-    transition: .3s ease all;
-}
-
-.nosotros__enlace:hover {
-    
-    text-decoration: none;
-    letter-spacing: 2px;
-    border-bottom: 1px solid rgba(0, 153, 173, 0.81);
-}
-
-/*nosotros1*/
-
-
-
-article {
+.login-box {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    width: 350px;
+    padding: 20px;
+    margin-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateY(-50%);
+    background: rgb(0, 188, 212);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 10px;
 }
 
-.content-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.text-wrapper {
+.login-box p:first-child {
+    margin: 0 0 30px;
+    padding: 0;
+    color: #000;
     text-align: center;
-    margin-right: 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
-.text-wrapper p{
-    text-align: justify;
-    font-stretch: condensed;
-    font-size: small;
-    margin: auto;
-    
+.login-box .user-box {
+    position: relative;
 }
 
-.image-wrapper{
-    text-align: center;
-    margin-left: 50px;
-
-}
-
-.nos_sub{
-
-    display: block;
-    margin-bottom: 20px;
+.login-box .user-box input {
     width: 100%;
-
+    padding: 10px 0;
+    font-size: 16px;
+    color: #000;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #000;
+    outline: none;
+    background: transparent;
 }
 
-
-
-.content-wrapper2 {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.text-wrapper2 {
-    text-align: center;
-    
-}
-
-.text-wrapper2 p{
-
-    text-align: justify;
-    font-stretch: condensed;
-    font-size: small;
-    margin: auto;
-    
-}
-
-
-.image-wrapper2 {  
-    text-align: center;  
-    margin-right: 50px;
-}
-
-
-
-.nos_iconos {
-
-    width: 200px;
-    height: 200px;
-
-}
-
-
-
-.btn-productos {
-
-    display: inline-block;
-    margin: 20px;
-    box-shadow: 30px;
-    padding: 10px 30px;
-    border-radius: 5px;
-    box-shadow: inset;
-    font-size: 15px;
-    transition: .8s ease all;   
-    box-shadow: 2px -4px 30px 6px rgba(190, 190, 190, 0.81);
-    border: 2px solid rgba(10, 10, 10, 0.856);
-    
-}
-
-.btn-productos:hover {
-    
-    text-decoration: none;
+.login-box .user-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #000;
+    pointer-events: none;
     transition: .5s;
-    transform: scale(1.2);
-    background-color: rgba(0, 197, 223, 0.81);
-    color: #f1fcff;
-    border: 2px solid rgba(0, 137, 155, 0.856);
-    
 }
 
-.mimg .img-fluid{
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: #000;
+    font-size: 12px;
+}
 
-    box-shadow: 0 15px 25px  rgba(17, 17, 17, 0.856);
-    
+.login-box form a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    font-weight: bold;
+    color: #000;
+    background: rgba(0, 140, 158, 0.986);
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 3px
+}
 
+.login-box a:hover {
+    background: rgba(0, 87, 99, 0.81);
+    color: #272727;
+    border-radius: 5px;
+}
+
+.login-box a span {
+    position: absolute;
+    display: block;
+}
+
+.login-box a span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #fff);
+    animation: btn-anim1 1.5s linear infinite;
+}
+
+@keyframes btn-anim1 {
+    0% {
+    left: -100%;
+    }
+
+    50%,100% {
+    left: 100%;
+    }
+}
+
+.login-box a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #fff);
+    animation: btn-anim2 1.5s linear infinite;
+    animation-delay: .375s
+}
+
+@keyframes btn-anim2 {
+    0% {
+    top: -100%;
+    }
+
+    50%,100% {
+    top: 100%;
+    }
+}
+
+.login-box a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #fff);
+    animation: btn-anim3 1.5s linear infinite;
+    animation-delay: .75s
+}
+
+@keyframes btn-anim3 {
+    0% {
+    right: -100%;
+    }
+
+    50%,100% {
+    right: 100%;
+    }
+}
+
+.login-box a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #fff);
+    animation: btn-anim4 1.5s linear infinite;
+    animation-delay: 1.125s
+}
+
+@keyframes btn-anim4 {
+    0% {
+    bottom: -100%;
+    }
+
+    50%,100% {
+    bottom: 100%;
+    }
+}
+
+.login-box p:last-child {
+    color: #000000;
+    font-size: 14px;
+}
+
+.login-box a.a2 {
+    color: #ffffffcc;
+    text-decoration: none;
+}
+
+.login-box a.a2:hover {
+    background: transparent;
+    color: #ffffff;
+    border-radius: 5px;
 }
 
 
-/*Contactanos*/
-
-.form_con{
-
-    border: 2px solid #333;
-    background-color: #f1fbfd;
-    padding: 5px 20px 20px 20px;
-    border-radius: 3px;
-    box-shadow: -2px -4px 17px 6px rgba(0, 153, 173, 0.81);
-    
-
-}
-
-#textarea{
-
-resize: none;
-
-}
-
-.contactame{
-
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(/Portafolio/img/wave.svg);
-    
-
-}
 
 /*footer*/
 
 .contenedor .footer {
-    margin: 20X 20px;
-    width: 100%;
+    width: 95%;
     height: 50px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     text-align: center;
     align-items: center;
@@ -709,12 +590,7 @@ resize: none;
         max-width: 10000px;
         grid-template-areas: 
             "header_bann  header_bann header_bann header_bann "
-            "menu menu menu menu "
-            "header header header  header"
-            "container container container  container"
-            "proyect_view proyect_view proyect_view proyect_view"
-            " sobre_mi sobre_mi sobre_mi sobre_mi "
-            "contactame contactame contactame contactame "
+            "Login-container Login-container Login-container Login-container"
             "footer footer  footer footer ";
     }
     
@@ -724,14 +600,7 @@ resize: none;
 
     }
 
-    .image-wrapper{
-
-        margin: 0  ;
-    }
-    .image-wrapper2{
-
-        margin: 0;
-    }
+    
 
     .menu{
 
