--- a/css/Ini_sesion.css
+++ b/css/Ini_sesion.css
@@ -124,6 +124,19 @@ body[data-bs-theme="dark"] .login-box a.a2:hover {
 
 }
 
+body[data-bs-theme="dark"] .login-box a.b2 {
+    
+    color: #000000;
+    background-color: transparent;
+
+
+}
+
+body[data-bs-theme="dark"] .login-box a.b2:hover {
+    background: transparent;
+    color: #ffffff;
+}
+
 body[data-bs-theme="dark"] .footer{
     
     box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
@@ -362,7 +375,7 @@ body[data-bs-theme="light"] a{
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 700px;
+    height: 600px;
 }
 
 .login-box {
@@ -371,7 +384,7 @@ body[data-bs-theme="light"] a{
     align-items: center;
     width: 350px;
     padding: 20px;
-    margin-top: 200px;
+    margin-top: 400px;
     margin-left: auto;
     margin-right: auto;
     transform: translateY(-50%);
@@ -385,6 +398,7 @@ body[data-bs-theme="light"] a{
     margin: 0 0 30px;
     padding: 0;
     color: #000;
+    border-bottom: 1px solid #000000;
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
@@ -400,7 +414,8 @@ body[data-bs-theme="light"] a{
     padding: 10px 0;
     font-size: 16px;
     color: #000;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    
     border: none;
     border-bottom: 1px solid #000;
     outline: none;
@@ -418,6 +433,12 @@ body[data-bs-theme="light"] a{
     transition: .5s;
 }
 
+.login-box .user-box {
+
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
 .login-box .user-box input:focus ~ label,
 .login-box .user-box input:valid ~ label {
     top: -20px;
@@ -460,6 +481,25 @@ body[data-bs-theme="light"] a{
     height: 2px;
     background: linear-gradient(90deg, transparent, #fff);
     animation: btn-anim1 1.5s linear infinite;
+}
+
+.login-box a.b2 {
+    color: #ffffffcc;
+    text-decoration: none;
+    background-color: transparent;
+    font-size: 10px;
+    display: flex;
+    position: relative;
+    padding: 0;
+    letter-spacing: 0;
+    margin-top: 0;
+
+}
+
+.login-box a.b2:hover {
+    background: transparent;
+    color: #ffffff;
+    
 }
 
 @keyframes btn-anim1 {
