--- a/css/Ini_sesion.css
+++ b/css/Ini_sesion.css
@@ -375,7 +375,7 @@ body[data-bs-theme="light"] a{
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 600px;
+    height: 800px;
 }
 
 .login-box {
@@ -452,6 +452,7 @@ body[data-bs-theme="light"] a{
     display: inline-block;
     padding: 10px 20px;
     font-weight: bold;
+    margin-bottom: 15px;
     color: #000;
     background: rgba(0, 140, 158, 0.986);
     font-size: 16px;
@@ -578,13 +579,14 @@ body[data-bs-theme="light"] a{
 }
 
 .login-box a.a2 {
-    color: #ffffffcc;
-    text-decoration: none;
+    color: #ffffffcc ;
+    text-decoration: none ;
+    user-select: none ;
 }
 
 .login-box a.a2:hover {
     background: transparent;
-    color: #ffffff;
+    color: #ff0000 ;
     border-radius: 5px;
 }
 
