--- a/css/Recup_contra.css
+++ b/css/Recup_contra.css
@@ -25,27 +25,22 @@ body[data-bs-theme="dark"] a{
     
 }
 
-body[data-bs-theme="dark"] .header_bann{
-    
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
-    background-image: linear-gradient(to bottom, rgba(170, 0, 0, 0.81), rgba(61, 0, 0, 0.81));
-    color: #fff;
-    border-bottom: 2px solid #ff0000;
-    border-left: 0px solid #ff0000;
-    border-right: 0px solid #ff0000;
-    
-}
 
 body[data-bs-theme="dark"] .login-box{
 
     background: rgba(87,0,0,0.81);
 
 }
+body[data-bs-theme="dark"] .txt-box{
+
+    color: #030000;
+
+}
+
 
 body[data-bs-theme="dark"] .login-box p:first-child {
     
     color: #ffffff;
-    border-bottom: 1px solid #ffffff;
     
 }
 
@@ -74,38 +69,8 @@ body[data-bs-theme="dark"] .login-box form a {
 
 }
 
-body[data-bs-theme="dark"] .login-box a:hover {
-    background: #b60000e8;
-    color: #350000;
-}
 
 
-body[data-bs-theme="dark"] .login-box a span:nth-child(1) {
-
-    background: linear-gradient(90deg, transparent, #ff0000);
-
-}
-
-body[data-bs-theme="dark"] .login-box a span:nth-child(2) {
-
-    background: linear-gradient(180deg, transparent, #ff0000);
-
-}
-
-
-
-body[data-bs-theme="dark"] .login-box a span:nth-child(3) {
-
-    background: linear-gradient(270deg, transparent, #ff0000);
-
-}
-
-
-body[data-bs-theme="dark"] .login-box a span:nth-child(4) {
-
-    background: linear-gradient(360deg, transparent, #ff0000);
-
-}
 
 body[data-bs-theme="dark"] .login-box p:last-child {
     color: #fdfdfd;
@@ -136,19 +101,6 @@ body[data-bs-theme="dark"] .login-box a.b2:hover {
     background: transparent;
     color: #ffffff;
 }
-
-body[data-bs-theme="dark"] .footer{
-    
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
-    border-top: 2px solid #ff0000;
-    border-left: 0px solid #ff0000;
-    border-right: 0px solid #ff0000;
-    background-image: linear-gradient(to bottom, rgba(170, 0, 0, 0.81), rgba(61, 0, 0, 0.81));
-    
-}
-
-
-
 
 .white-icon{
 
@@ -238,9 +190,9 @@ body[data-bs-theme="light"] a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 350px;
+    width: 370px;
     padding: 20px;
-    margin-top: 450px;
+    margin-top: 530px;
     margin-left: auto;
     margin-right: auto;
     transform: translateY(-50%);
@@ -254,11 +206,18 @@ body[data-bs-theme="light"] a{
     margin: 0 0 30px;
     padding: 0;
     color: #000;
-    border-bottom: 1px solid #000000;
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
     letter-spacing: 1px;
+}
+
+.txt-box{
+
+    font-size: 12px;
+    padding: 20px;
+    color: #ffffff;
+
 }
 
 .login-box .user-box {
@@ -271,7 +230,6 @@ body[data-bs-theme="light"] a{
     font-size: 16px;
     color: #000;
     margin-bottom: 10px;
-    
     border: none;
     border-bottom: 1px solid #000;
     outline: none;
@@ -358,75 +316,7 @@ body[data-bs-theme="light"] a{
     
 }
 
-@keyframes btn-anim1 {
-    0% {
-    left: -100%;
-    }
 
-    50%,100% {
-    left: 100%;
-    }
-}
-
-.login-box a span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #fff);
-    animation: btn-anim2 1.5s linear infinite;
-    animation-delay: .375s
-}
-
-@keyframes btn-anim2 {
-    0% {
-    top: -100%;
-    }
-
-    50%,100% {
-    top: 100%;
-    }
-}
-
-.login-box a span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #fff);
-    animation: btn-anim3 1.5s linear infinite;
-    animation-delay: .75s
-}
-
-@keyframes btn-anim3 {
-    0% {
-    right: -100%;
-    }
-
-    50%,100% {
-    right: 100%;
-    }
-}
-
-.login-box a span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #fff);
-    animation: btn-anim4 1.5s linear infinite;
-    animation-delay: 1.125s
-}
-
-@keyframes btn-anim4 {
-    0% {
-    bottom: -100%;
-    }
-
-    50%,100% {
-    bottom: 100%;
-    }
-}
 
 .login-box p:last-child {
     color: #000000;
