--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -328,7 +328,7 @@ body[data-bs-theme="light"] a{
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    border: 1px solid coral;
+    border: 1px solid rgb(80, 80, 80);
     border-radius: 1rem;
 }
 
